--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.pattern.console=%d{HH:mm:ss} [%t] %-5level %logger{36} - %msg%n
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.password=
