--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database=0
 spring.redis.password=
+server.servlet.session.cookie.max-age=2100
