--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <version>2.1.7.RELEASE</version>
         </dependency>
 
+        <!-- redisson锁 -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
