--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # 日志格式
-logging.pattern.console=%d{HH:mm:ss} [%t] %-5level %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss:SSS} [%t] %-5level %logger{36} - %msg%n
+
+server.port=8080
 # redis连接属性
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.database=0
+spring.redis.database=10
 spring.redis.password=
 # cookie保存时长
 server.servlet.session.cookie.max-age=2100
